--- a/app/src/features/apiClient/screens/apiClient/components/CommonApiClientImporter/commonApiClientImporter.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/CommonApiClientImporter/commonApiClientImporter.scss
@@ -20,6 +20,11 @@
       display: flex;
       align-items: center;
       gap: 8px;
+
+      a {
+        display: inline-flex;
+        align-items: center;
+      }
     }
 
     .importer-header-info-icon {
