--- a/app/src/features/apiClient/screens/apiClient/components/modals/ImportFromCurlModal/importFromCurlModal.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/modals/ImportFromCurlModal/importFromCurlModal.scss
@@ -13,9 +13,14 @@
 
 .import-curl-modal {
   &-title {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     gap: 8px;
+
+    a {
+      display: inline-flex;
+      align-items: center;
+    }
   }
 
   &-info-icon {
